--- a/DOMAIN7 - Security Operations/7.1 Understand and comply with investigations.md
+++ b/DOMAIN7 - Security Operations/7.1 Understand and comply with investigations.md
@@ -277,11 +277,11 @@ In any investigation, whether digital or physical, you can't just grab what you 
 
 There are five key paths to legally acquiring evidence, each with specific scenarios and limitations:
 
-1. **Voluntary Surrender.** Sometimes the simplest path is the most overlooked. If a user, employee, or third party willingly turns over data or hardware, that's voluntary surrender. This is the cleanest and least contested form of evidence acquisition, as consent is clear. Think of an employee handing over a USB stick for inspection after noticing suspicious files. The catch? Consent can be withdrawn unless a formal agreement or custody process is established.
-2. **Subpoena.** A subpoena is a formal legal order that compels a person or organization to hand over documents, records, or evidence. In cybersecurity investigations, this might be used to request logs from an ISP, chat histories from a service provider, or archived emails. Subpoenas are powerful but require time and proper legal procedures. The advantage is clear: refusal can carry legal penalties, making this an essential tool in both criminal and civil cases.
-3. **Plain View Doctrine.** If during a lawful activity, evidence is in plain sight, it can be legally seized and used. Imagine an IT administrator performing routine maintenance and stumbling upon an unencrypted folder labeled "Payroll_Leak" containing sensitive data being prepared for exfiltration. As long as the admin had authorized access to that system, the discovery is legitimate. The plain view doctrine prevents criminals from hiding behind the argument of search limitations when the evidence is visible and discoverable without special effort.
-4. **Search Warrant.** When suspicion is strong but access is restricted, authorities may obtain a search warrant. This is a court order granting permission to search specific premises and seize specific evidence. In digital investigations, warrants might authorize the imaging of a server or the confiscation of physical storage devices. The warrant must be specific; overreach can result in the exclusion of improperly gathered evidence.
-5. **Exigent Circumstances.** Sometimes the clock is ticking too fast for paperwork. Exigent circumstances allow for evidence collection without prior authorization if delay could result in data destruction, harm, or further criminal activity. For instance, if an attacker is actively wiping logs from a compromised machine, security staff might justify immediate evidence capture before the trail is lost.
+1. **Voluntary Surrender.** Sometimes the simplest path is the most overlooked. `If a user, employee, or third party willingly turns over data or hardware`, that's voluntary surrender. This is the cleanest and least contested form of evidence acquisition, as consent is clear. Think of an employee handing over a USB stick for inspection after noticing suspicious files. The catch? Consent can be withdrawn unless a formal agreement or custody process is established.
+2. **Subpoena.** A subpoena is `a formal legal order that compels a person or organization to hand over documents, records, or evidence`. In cybersecurity investigations, this might be used to request logs from an ISP, chat histories from a service provider, or archived emails. Subpoenas are powerful but require time and proper legal procedures. The advantage is clear: refusal can carry legal penalties, making this an essential tool in both criminal and civil cases.
+3. **Plain View Doctrine.** If during a lawful activity, `evidence is in plain sight`, it can be legally seized and used. Imagine an IT administrator performing routine maintenance and stumbling upon an unencrypted folder labeled "Payroll_Leak" containing sensitive data being prepared for exfiltration. As long as the admin had authorized access to that system, the discovery is legitimate. The plain view doctrine prevents criminals from hiding behind the argument of search limitations when the evidence is visible and discoverable without special effort.
+4. **Search Warrant.** When suspicion is strong but access is restricted, authorities may obtain a search warrant. This is a `court order granting permission to search specific premises` and seize specific evidence. In digital investigations, warrants might authorize the imaging of a server or the confiscation of physical storage devices. The warrant must be specific; overreach can result in the exclusion of improperly gathered evidence.
+5. **Exigent Circumstances.** Sometimes the clock is ticking too fast for paperwork. Exigent circumstances `allow for evidence collection without prior authorization` if delay could result in data destruction, harm, or further criminal activity. For instance, if an attacker is actively wiping logs from a compromised machine, security staff might justify immediate evidence capture before the trail is lost.
 
 | Method                | **Definition**                                                                                                        | **Scenario**                                                                                   | **Advantage**                                                                           | **Limitation**                                                                        |
 | --------------------- | --------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------- |
@@ -292,7 +292,7 @@ There are five key paths to legally acquiring evidence, each with specific scena
 | Exigent Circumstances | Evidence can be collected immediately without prior authorization if delay risks destruction, harm, or further crime. | Active attack where logs are being wiped from a compromised machine.                           | Allows immediate capture of critical evidence before it is lost.                        | Must justify urgency; misuse can be challenged legally.                               |
 
 
-Now that we understand the lawful avenues for gathering evidence, let’s talk about the practical fieldwork — the techniques you'll actually use to piece together the facts. Think of these as our four investigative pillars:
+Now that we understand the lawful avenues for **gathering evidence**, let’s talk about the practical fieldwork — the techniques you'll actually use to piece together the facts. Think of these as our four investigative pillars:
 
 1. **Data Capture.** This is the bread and butter of digital forensics. Data capture includes imaging hard drives, copying log files, extracting volatile memory (RAM), and capturing network traffic. The goal is to create a faithful, unaltered snapshot of digital information. Using proper tools (write blockers, hash verification, forensic suites like EnCase or FTK) ensures that you preserve the original evidence and work only with validated copies. Why is this important? Because digital evidence is incredibly fragile. Powering off a machine can erase volatile data. Opening a file can change its access timestamps. Data capture, done early and correctly, locks in the state of the system before human error or malicious actors can muddy the waters.
 2. **Interviews.** Interviews are a goldmine for context. They are typically non-confrontational conversations aimed at gathering facts, timelines, and observations. Think of talking to system administrators, end-users, or third-party vendors. The key here is building rapport and asking open-ended questions. You’re not just hunting for yes/no answers, but for clues the person might not even realize are important: “When did you first notice the unusual activity?” or “Can you describe what you were doing just before the system crashed?”
